# CROW-REST-BOILERPLATE

./: CMakeLists.txt  Dockerfile  README.md  a.cpp  com-run.sh  main.cpp  sha512.h
bbox/: Dockerfile  container.sh
